--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,4 +71,6 @@ dependencies {
     implementation "com.google.firebase:firebase-analytics:17.2.3"
     implementation "com.firebaseui:firebase-ui-auth:6.2.0"
     implementation "com.google.firebase:firebase-auth-ktx:19.2.0"
+    implementation 'com.firebaseui:firebase-ui-storage:6.0.2'
+    implementation 'com.google.firebase:firebase-firestore:21.7.1'
 }
