Clicking on imageview of recyclerview list items starts a new activity that displays more information about the clicked recipe, still need to add cook time, score, and clean up UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".ui.OneRecipeActivity"
+            android:parentActivityName=".MainActivity"
+            android:label="One Recipe">
+            <intent-filter>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
