--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,4 +73,7 @@ dependencies {
     implementation "com.google.firebase:firebase-auth-ktx:19.2.0"
     implementation 'com.firebaseui:firebase-ui-storage:6.0.2'
     implementation 'com.google.firebase:firebase-firestore:21.7.1'
+
+    // Security
+    implementation "androidx.security:security-crypto:1.0.0-rc03"
 }
